# EngineFixesSkyrim64

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EngineFixes.ini  EngineFixes.toml  EngineFixes64.ini  EngineFixes64_SNCT.ini  EngineFixesSkyrim64.sln  EngineFixesSkyrim64.vcxproj  EngineFixesSkyrim64.vcxproj.filters  EngineFixes_SNCT.ini  LICENSE  PackageGen.py  Patches.cpp  Patches.h  ProjectGen.py  README.md  config.cpp  config.h  enginefixes.vcxproj  enginefixes.vcxproj.filters  exports.def  main.cpp  performance_bug_fixes_64.filters  performance_bug_fixes_64.vcxproj  performance_bug_fixes_64.vcxproj.filters  tools.h  util.cpp  util.h  vcpkg.json  version.rc  xmake.lua
.github/workflows/: main.yml  main_ci.yml
Skyrim/Data/SKSE/Plugins/: EngineFixes.toml
TES/: BGSShaderParticleGeometryData.h  BGSSoundCategory.h  BSTArray.h  BSTHashMap.h  BSTScatterTable.h  CRC.h
bugs/: DoublePerkApply.cpp  SlowTimeCameraMove.cpp  SlowTimeCameraMove.h  TreeReflections.cpp  TreeReflections.h  VerticalSens.cpp  WaterflowTimer.cpp  WaterflowTimer.h
cmake/: Version.h.in  XSEPlugin.cmake  headerlist.cmake  sourcelist.cmake  version.cmake
cmake/ports/autotoml/: portfile.cmake  vcpkg.json
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/tbb/: export-safer-funcs.diff  portfile.cmake
cmake/triplets/: x64-windows-custom.cmake
include/: config.h  fixes.h  offsets.h  patches.h  utils.h  version.h  warnings.h
lib/: INIReader.h  Simpleini.h  tortellini.hh
lib/jemalloc/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
lib/jemalloc/include/jemalloc/internal/: arena_types.h  jemalloc_internal_defs.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
patches/: BSReadWriteLockCustom.cpp  BSReadWriteLockCustom.h  DoublePerkApply.cpp  DoublePerkApply.h  ExperimentalMaxStdio.cpp  ExperimentalMaxStdio.h  FormCaching.cpp  FormCaching.h  MaxStdio.cpp  MaxStdio.h  MemoryManager.cpp  MemoryManager.h  PrecacheKiller.cpp  PrecacheKiller.h  SaveAddedSoundCategories.cpp  SaveAddedSoundCategories.h  SaveScreenshot.cpp  SaveScreenshot.h  Saves.cpp  Saves.h  SlowTimeCameraMove.cpp  SlowTimeCameraMove.h  SnowSparkle.cpp  SnowSparkle.h  Temporary.cpp  Temporary.h  TreeReflection.cpp  TreeReflection.h  VerticalLookSensitivity.cpp  VerticalLookSensitivity.h  WaterflowTimer.cpp  WaterflowTimer.h
performance/: DistantTreeCache.cpp  DistantTreeCache.h  GlobalFormTableCache.cpp  GlobalFormTableCache.h
scripts/: MakeGen.py  PackageGen.py  archive_artifacts.py  cmake_generate.py
specular_bug/: README.md  shaders011.7z
src/: PCH.h  clean_cosaves.cpp  clean_cosaves.h  config.cpp  config.h  fixes.cpp  fixes.h  main.cpp  offsets.h  patches.cpp  patches.h  settings.h  utils.cpp  version.h  warnings.cpp
src/allocator/: allocator.cpp  allocator.h
src/fixes/: animation_load_signed_crash.h  archery_downward_aiming.h  bethesda_net_crash.h  bgskeywordform_load_crash.h  bslightingambientspecular.h  bslightingshader_force_alpha_test.h  bslightingshader_parallax_bug.h  bslightingshaderproperty_shadowmap.h  bstempeffect_nirtti.h  calendar_skipping.h  cell_init.h  climate_load.h  conjuration_enchant_absorbs.h  create_armor_node_nullptr_crash.h  double_perk_apply.h  doubleperkapply.cpp  equip_shout_event_spam.h  esl_cell_loading_bug.h  facegen_morphdatahead_nullptr_crash.h  fixes.cpp  fixes.h  get_keyword_item_count.h  gheap_leak_detection_crash.h  global_time.h  globaltime.cpp  initialize_hit_data_nullptr_crash.h  lip_sync.h  memory_access_errors.h  miscfixes.cpp  mo5s_typo.h  music_overlap.h  nitimecontroller_no_target.h  null_process_crash.h  perk_fragment_is_running.h  precomputed_paths.h  removed_spellbook.h  save_screenshots.h  saved_havok_data_load_init.h  savescreenshots.cpp  shaderfixes.cpp  (+6 more)
src/memory/: allocator.cpp  allocator.h  havok_memory_system.h  memory.cpp  memory.h  memory_manager.h  renderpass_cache.h  scaleform_allocator.h  scrapheap.h
src/patches/: allocators.cpp  allocators.h  allocators_std.cpp  allocators_std.h  allocators_tbb.cpp  allocators_tbb.h  disable_chargen_precache.h  disable_snow_flag.h  enable_achievements.h  form_caching.cpp  form_caching.h  formcaching.cpp  ini_setting_collection.h  max_stdio.h  memorymanager.cpp  miscpatches.cpp  override_crt_allocator.h  override_memory_manager.h  override_scaleform_allocator.cpp  override_scaleform_allocator.h  override_scrapheap.h  patches.cpp  patches.h  regular_quicksaves.h  renderpass_cache.h  safe_exit.h  safeexit.cpp  save_added_sound_categories.cpp  save_added_sound_categories.h  save_game_max_size.h  saveaddedsoundcategories.cpp  scaleform_allocator.h  scaleformallocator.cpp  scrolling_doesnt_switch_pov.h  shaderpatches.cpp  sleep_wait_time.h  tree_lod_reference_caching.cpp  tree_lod_reference_caching.h  treelodreferencecaching.cpp  waterflow_animation.cpp  (+1 more)
src/warnings/: miscwarnings.cpp  warnings.cpp  warnings.h
tools/: SkseCosaveCleaner.cpp  SkseCosaveCleaner.h
